--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 9000
-MONGO_URL = mongodb://127.0.0.1:27017/fimsystem_db
+# MONGO_URL = mongodb://127.0.0.1:27017/fimsystem_db
+MONGO_URL = mongodb+srv://mq0062783:mFVLC8CUI2P2jlkI@cluster0.hyms1gg.mongodb.net/
