--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 9000
 # MONGO_URL = mongodb://127.0.0.1:27017/fimsystem_db
-MONGO_URL = mongodb+srv://mq0062783:mFVLC8CUI2P2jlkI@cluster0.hyms1gg.mongodb.net/
+# MONGO_URL = mongodb+srv://mq0062783:mFVLC8CUI2P2jlkI@cluster0.hyms1gg.mongodb.net/
+MONGO_URL = mongodb+srv://mq0062783:mFVLC8CUI2P2jlkI@cluster0.hyms1gg.mongodb.net/fimsystem_db?retryWrites=true&w=majority
+
