--- a/vercel.json
+++ b/vercel.json
@@ -2,26 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
+      "src": "./app.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/test",
-      "dest": "app.js"
-    },
+    
     {
       "src": "/(.*)",
       "dest": "app.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "functions": {
-    "app.js": {
-      "maxDuration": 30
-    }
-  }
+  ]
+   
+  
 }
